# recibe_box_v2

./: README  pyproject.toml
recipebox/: forms.py  models.py  settings.py  urls.py  views.py
recipebox/migrations/: 0001_initial.py
recipebox/templates/: authors.html  editrecipe.html  generic_form.html  index.html  recipes.html  signup.html
