[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = "List of recipes per author!"
authors = ["Jake Hershey, <joehershey45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.12.3"
django = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
